<resources>
    <string name="app_name">AlarmClockDemo</string>
    <string name="bt_addAlarm">添加</string>
    <string name="bt_delAlarm">删除</string>
    <string name="bt_stopWatch">秒表</string>
    <string name="bt_weather">天气</string>
    <string name="bt_alarmDelay">推迟五分钟</string>
    <string name="bt_alarmStop">返回主页</string>
    <string name="bt_stop">停止</string>
    <string name="bt_pause">分计</string>
    <string name="bt_start">开始</string>
    <string name="bt_reset">重置</string>
    <string name="bt_ok">确认</string>
    <string name="bt_addWeather">添加城市</string>
    <string name="hint_city">请输入城市的拼音如：wuhan</string>
    <string name="bt_empty">清空</string>
    <string name="bt_stopAlarm">关闭声音</string>
</resources>
